slider overflow fixed and smaller on small screen

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -21,6 +21,10 @@ header {
   background-color: $dark;
 }
 
+html {
+  overflow-x: hidden;
+}
+
 body {
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
@@ -211,15 +215,20 @@ h2.header-ttl {
   display: flex;
   animation: slider 20s infinite;
 
+  
+
   .cardo {
     height: 100%;
     width: 20%;
     border: 0;
+    
+   
   }
 
   img {
-    width: 100%;
-    height: 50%;
+    float: left;
+    max-width: 200px;
+    height: 150px;
   }
 
   .card-body {
@@ -239,6 +248,7 @@ h2.header-ttl {
     color: $light;
     font-size: 0.8em;
     margin-bottom: 1.5em;
+    line-height: 1.2;
   }
 
   label {
